--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,9 @@
 *::after {
   box-sizing: border-box;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   width: 1100px;
   margin: 0 auto;
@@ -27,6 +29,7 @@ blockquote {
 
 a {
   color: inherit;
+  font-weight: normal;
 }
 
 img {
