--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@
   position: relative;
   height: 757px;
   overflow: hidden;
-  background-image: url("../images/cover.jpg");
+  background-image: url("./images/cover.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -226,18 +226,18 @@
 }
 
 .card_type_film {
-  background-image: url("/images/card-lot-01.jpg");
+  background-image: url("./images/card-lot-01.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .card_type_book {
-  background-image: url("/images/card-lot-02.jpg");
+  background-image: url("./images/card-lot-02.jpg");
   background-size: cover;
 }
 
 .card_type_picture {
-  background-image: url("/images/card-lot-03.jpg");
+  background-image: url("./images/card-lot-03.jpg");
   background-size: cover;
 }
 
