--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,3 @@
-/* место для вашего кода */
-/* styles.css */
-
 .header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -25,12 +22,11 @@
   list-style-type: circle;
 }
 
-
 .header__links-list-item_no-bullit {
   list-style-type: none;
 }
 
-.header__link .header__link__active {
+.header__link .link__active {
   text-decoration: none;
 }
 
@@ -39,7 +35,11 @@
   transition: transform 0.3s, opacity 0.3s;
 }
 
-.link__hover:hover {
+.header__link:hover {
+  color: rgb(92, 94, 90);
+}
+
+.address__link:hover {
   color: rgb(92, 94, 90);
 }
 
@@ -56,18 +56,18 @@
 .header__address {
   justify-self: end;
   margin-right: 62px;
-  line-height: 1.35;
 }
 
-.address ul {
+.address {
   font-style: normal;
+  text-underline-offset: 4px;
   list-style-type: none;
+  line-height: 1.35;
 }
 
 .cover {
   position: relative;
-  height: 757px;
-  overflow: hidden;
+  min-height: 757px;
   background-image: url("../images/cover.jpg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -77,7 +77,7 @@
 .cover__title {
   position: relative;
   z-index: 2;
-  padding: 165px 50px 237px 50px;
+  padding: 165px 50px 127px 50px;
   color: #fff;
   font-size: 100px;
   letter-spacing: 0.3em;
@@ -116,13 +116,13 @@
 }
 
 .cover__description {
-  position: absolute;
+  position: relative;
   bottom: 0;
   z-index: 2;
   display: flex;
   align-items: center;
   gap: 80px;
-  padding: 0px 50px 50px 78px;
+  padding: 0 50px 50px 78px;
 }
 
 .cover__description-text {
@@ -138,18 +138,19 @@
   border: 1px solid #fff;
   padding: 12px 32px;
   color: #fff;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   text-transform: uppercase;
   background-color: transparent;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
   cursor: pointer;
   white-space: nowrap;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
 
 .bet-button:hover {
-  background-color: #fff;
-  color: #000;
   border-color: #000;
+  color: #000;
+  background-color: #fff;
 }
 
 .lots {
@@ -170,6 +171,7 @@
   height: 100%;
   min-height: 563px;
   background-position: center;
+  background-size: cover;
 }
 
 .lots__card-list {
@@ -182,16 +184,13 @@
 .lots__card-list-item {
   position: relative;
   width: 334px;
-  height: 563px;
   list-style-type: none;
-  overflow: hidden;
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .card-link {
   display: block;
   width: 100%;
-  height: 100%;
   color: #fff;
   text-decoration: none;
   text-underline-offset: 5px;
@@ -205,7 +204,7 @@
 .card__title {
   position: relative;
   z-index: 2;
-  margin: 50px 40px auto;
+  margin: 51px 40px auto;
   font-weight: 700;
   font-size: 22px;
   line-height: 120%;
@@ -225,18 +224,14 @@
 
 .card_type_film {
   background-image: url("../images/card-lot-01.jpg");
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url("../images/card-lot-02.jpg");
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url("../images/card-lot-03.jpg");
-  background-size: cover;
 }
 
 .lots__look-more-link {
@@ -252,7 +247,7 @@
 
 .about {
   display: flex;
-  margin: 182px 24px 0px;
+  margin: 181px 24px 0;
 }
 
 .about__logo {
@@ -267,7 +262,6 @@
 
 .about__logo-image {
   width: 148px;
-  height: 114px;
   margin: auto;
 }
 
@@ -297,14 +291,9 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 180px 50px 88px;
+  padding: 178px 50px 88px;
   font-weight: 400;
   font-size: 18px;
-}
-
-.footer__address {
-  line-height: 1.35;
-  text-underline-offset: 4px;
 }
 
 .footer__links-list {
@@ -322,14 +311,17 @@
 
 .footer__social-icon {
   width: 48px;
-  height: 48px;
 }
 
 .footer__link {
   transition: transform 0.3s, opacity 0.3s;
 }
 
-.footer__link:hover .footer__social-icon {
-  transform: scale(1.1);
+.footer__link:hover {
+  color: rgb(92, 94, 90);
+}
+
+.footer__social-icon {
   opacity: 0.8;
+  transform: scale(1.1);
 }
