--- a/styles/style.css
+++ b/styles/style.css
@@ -276,7 +276,7 @@
 .about__column {
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 25px;
   margin-left: 72px;
   padding-top: 101px;
 }
@@ -303,6 +303,15 @@
   list-style-type: none;
 }
 
+.footer__link {
+  text-underline-offset: 4px;
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+.footer__link:hover {
+  color: rgb(92, 94, 90);
+}
+
 .footer__social-list {
   display: flex;
   gap: 48px;
@@ -311,17 +320,4 @@
 
 .footer__social-icon {
   width: 48px;
-}
-
-.footer__link {
-  transition: transform 0.3s, opacity 0.3s;
-}
-
-.footer__link:hover {
-  color: rgb(92, 94, 90);
-}
-
-.footer__social-icon {
-  opacity: 0.8;
-  transform: scale(1.1);
 }
